# CodeReview-App

./: .gitattributes
CodeReview-App/: .gitignore  CLAUDE.md  README.md  USAGE.md
CodeReview-App/backend/: main.py  pyproject.toml  requirements.txt
CodeReview-App/backend/models/: schemas.py
CodeReview-App/backend/prompts/: code_review_prompt.py
CodeReview-App/backend/services/: llm_reviewer.py  static_reviewer.py  token_refresh.py  xaml_fixer.py  xaml_parser.py  zip_extractor.py
CodeReview-App/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
CodeReview-App/frontend/src/: App.tsx  index.css
CodeReview-App/frontend/src/components/: DiffViewer.tsx  ExportButton.tsx  ReviewGrid.tsx  RulesCatalogModal.tsx  SummaryPanel.tsx  UploadZone.tsx
CodeReview-App/frontend/src/context/: ReviewContext.tsx
CodeReview-App/frontend/src/models/: finding.ts
CodeReview-App/frontend/src/pages/: HomePage.tsx  ResultsPage.tsx  ReviewPage.tsx
CodeReview-App/frontend/src/services/: apiClient.ts  excelExporter.ts
