[project]
name = "xaml-codereview-backend"
version = "0.1.0"
description = "UiPath XAML Code Review Tool — FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "uipath",
    "uipath-langchain",
    "fastapi",
    "uvicorn[standard]",
    "python-dotenv",
    "python-multipart",
    "httpx",
]
